workload/prometheus-cstor/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: prometheus-cstor-ingress
 namespace: prometheus-cstor
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
  kubernetes.io/tls-acme: "true"
  kubernetes.io/ingress.class: "nginx"
spec:
 tls:
 - hosts:
   - prometheus-dashboard.openebs.ci
   - prometheus.openebs.ci
   secretName: openebs-ingress
 rules:
 - host: prometheus-dashboard.openebs.ci
   http:
     paths:
     - path: /
       backend:
         serviceName: prometheus-service
         servicePort: 9090
 rules:
 - host: prometheus.openebs.ci
   http:
     paths:
     - path: /
       backend:
         serviceName: prometheus-service
         servicePort: 9090
